public/css/custom.css
#filter {
	background-color: #AFC6E0;
	margin-left: 30px;
	width: 180px;
}

#fbbtn {
	padding-left: 0px;
	padding-right: 0px;
	margin-top: 55px;
}

#paramheader {
	font-size: medium;
	margin-bottom: 6px;
}

#submitdata {
	background-color: #3C6492;
	margin-top: -25px;
}

#paramnote {
	margin:5px auto 0 auto;
	line-height: 1.2;
	font-size: smaller;
}

.filtersectionheader {
font-size: large;
}

.arrowbtn {
	border-color: rgba(100, 100, 100, 0.0);
	background-color: rgba(100, 100, 100, 0.0);
	max-width: 5px;
	padding-top: 0px;
	padding-bottom: 0px;
	outline: none !important;
}

#leftarrow {
	margin-left: -20px;
}

#filterheader {
	background-color: #C01C1C;
}


#technical {
	background-color: #F0AD4E;
	border:1px solid #777777;
}

.glowing {
	border-color: #FF0000;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 16px rgba(0, 70, 150, 1);
}

.btn:focus,.btn:active {
   outline: none !important;
}

#nontechnical {
	background-color: #849F65;
	border:1px solid #777777;
}

#globalcore {
	background-color: #8B572A;
	border:1px solid #777777;
}

#goldnuggetbtn {
	background-color: #101B45;
	border:1px solid #101B45;
	height: 34px;
}

#silvernuggetbtn {
	background-color: #101B45;
	border:1px solid #101B45;
	height: 34px;
}

#goldnuggetimg {
	height: 15px;
	margin-top: -2px;
}

#silvernuggetimg {
	height: 15px;
	margin-top: -2px;
}

#darkcheckmark {
	height: 45px;
	padding-top: 0px;
	padding-bottom: 0px;
	margin-top: 0px;
	margin-bottom: 0px;
	margin-left: 15px;
}

#lightcheckmark {
	height: 45px;
	padding-top: 0px;
	padding-bottom: 0px;
	margin-top: -13px;
	margin-bottom: 0px;
	margin-left: 10px;
}

#datatable {
	font-family: 	Arial, Verdana, sans-serif;
	font-size:	13px;
}

#tablepanel {
		min-width: 450px;
}

#levelcheckboxtext {
margin-left: -5px;
}

#randomred{
	background-color: #C01C1C;
}

#courselevellabel {
	margin-bottom: -5px;
}

#randompink{
	background-color: #BD0FE1;
}

#shorthline {
	background-color: #000000;
	height: 1px;
}

#submitquery {
	background-color: #428BCA;
	border:1px solid #428BCA;
}

#inforow {
	height: 50px;
}

#rightcollumn {
	min-width: 370px;
	white-space: nowrap;
}

#submission {
	background-color: #AFC6E0;
}

#innermainrow {
	min-width: 1250px;
	max-width: 1500px;
	
	height: 100px;
	display: flex;
}

#mainsubtitle {
	margin-top: -15px;
}

#mainheader {
	min-width: 1300px;
	max-width: 1500px;
}

#mainrow {
	overflow: auto;
	max-height: 100px;
}

.center-inner {
    display: table;
    margin: 0 auto; 
}

.top-5 { border-top:-5px; }
.top4 { margin-top:4px; }
.top5 { margin-top:5px; }
.top7 { margin-top:7px; }
.top10 { margin-top:10px; }
.top13 { margin-top:13px; }
.top15 { margin-top:15px; }
.top17 { margin-top:17px; }
.top30 { margin-top:30px; }
.top45 { margin-top:45px; }
.top60 { margin-top:60px; }

.bottom5 { margin-bottom:5px; }
.bottom7 { margin-bottom:7px; }
.bottom10 { margin-bottom:10px; }
.bottom15 { margin-bottom:15px; }
.bottom17 { margin-bottom:17px; }
.bottom30 { margin-bottom:30px; }

.left5 { margin-left:5px; }
.left7 { margin-left:7px; }
.left10 { margin-left:10px; }
.left15 { margin-left:15px; }
.left17 { margin-left:17px; }
.left30 { margin-left:30px; }

.right5 { margin-right:5px; }
.right7 { margin-right:7px; }
.right10 { margin-right:10px; }
.right15 { margin-right:15px; }
.right17 { margin-right:17px; }
.right25 { margin-right:25px; }
.right30 { margin-right:30px; }

